tests/suite/snapshots/suite__case_2lfx.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DirectiveName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 4
- token: Separator
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 6
- token: DirectiveParameter
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 9
- token: Separator
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: DirectiveParameter
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 13
- token: Separator
  start:
    line: 0
    column: 13
  end:
    line: 0
    column: 14
- token: Comment
  start:
    line: 0
    column: 14
  end:
    line: 0
    column: 15
- token: CommentText
  start:
    line: 0
    column: 15
  end:
    line: 0
    column: 33
- token: Break
  start:
    line: 0
    column: 33
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 14
- token: Comment
  start:
    line: 1
    column: 14
  end:
    line: 1
    column: 15
- token: CommentText
  start:
    line: 1
    column: 15
  end:
    line: 1
    column: 31
- token: Break
  start:
    line: 1
    column: 31
  end:
    line: 2
    column: 0
- token: DirectivesEnd
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 3
- token: Break
  start:
    line: 2
    column: 3
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: DoubleQuote
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: DoubleQuoted
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 4
- token: DoubleQuote
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 5
- token: Break
  start:
    line: 3
    column: 5
  end:
    line: 4
    column: 0

