tests/suite/snapshots/suite__case_2sxe.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Anchor
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: AnchorName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: Scalar
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 7
- token: MappingValue
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Anchor
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: AnchorName
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 11
- token: Separator
  start:
    line: 0
    column: 11
  end:
    line: 0
    column: 12
- token: Scalar
  start:
    line: 0
    column: 12
  end:
    line: 0
    column: 17
- token: Break
  start:
    line: 0
    column: 17
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: MappingValue
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Break
  start:
    line: 1
    column: 4
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Alias
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: AnchorName
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 5
- token: Break
  start:
    line: 2
    column: 5
  end:
    line: 3
    column: 0

