tests/suite/snapshots/suite__case_2wsf_00.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens:   \"\\c\""
  start:
    index: 14
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 0

