tests/suite/snapshots/suite__case_2wsf_01.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens:   \"\\xq-\""
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0

