tests/suite/snapshots/suite__case_2xxw.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Comment
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: CommentText
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 27
- token: Break
  start:
    line: 0
    column: 27
  end:
    line: 1
    column: 0
- token: Comment
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: CommentText
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 27
- token: Break
  start:
    line: 1
    column: 27
  end:
    line: 2
    column: 0
- token: Comment
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: CommentText
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 30
- token: Break
  start:
    line: 2
    column: 30
  end:
    line: 3
    column: 0
- token: DirectivesEnd
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 3
- token: Separator
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: TagHandle
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 6
- token: TagSuffix
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 9
- token: Break
  start:
    line: 3
    column: 9
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: MappingKey
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: Scalar
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 14
- token: Break
  start:
    line: 4
    column: 14
  end:
    line: 5
    column: 0
- token: Empty
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: MappingKey
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Separator
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 12
- token: Break
  start:
    line: 5
    column: 12
  end:
    line: 6
    column: 0
- token: Empty
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: MappingKey
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: Separator
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 2
- token: Scalar
  start:
    line: 6
    column: 2
  end:
    line: 6
    column: 11
- token: Break
  start:
    line: 6
    column: 11
  end:
    line: 7
    column: 0
- token: Empty
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0

