tests/suite/snapshots/suite__case_35kp.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: TagHandle
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 6
- token: TagSuffix
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: MappingKey
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Scalar
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: MappingValue
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Separator
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Break
  start:
    line: 2
    column: 3
  end:
    line: 3
    column: 0
- token: DirectivesEnd
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 3
- token: Separator
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: TagHandle
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 6
- token: TagSuffix
  start:
    line: 3
    column: 6
  end:
    line: 3
    column: 9
- token: Break
  start:
    line: 3
    column: 9
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Separator
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: TagHandle
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 4
- token: TagSuffix
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: Scalar
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: Break
  start:
    line: 4
    column: 9
  end:
    line: 5
    column: 0
- token: DirectivesEnd
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 3
- token: Separator
  start:
    line: 5
    column: 3
  end:
    line: 5
    column: 4
- token: TagHandle
  start:
    line: 5
    column: 4
  end:
    line: 5
    column: 6
- token: TagSuffix
  start:
    line: 5
    column: 6
  end:
    line: 5
    column: 9
- token: Break
  start:
    line: 5
    column: 9
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: Scalar
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: ScalarSpace
  start:
    line: 6
    column: 1
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 0
- token: Scalar
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 1
- token: Break
  start:
    line: 7
    column: 1
  end:
    line: 8
    column: 0

