tests/suite/snapshots/suite__case_3alj.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Indent
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: SequenceEntry
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 3
    line: 0
    column: 3
- token: Separator
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 4
    line: 0
    column: 4
- token: Scalar
  start:
    index: 4
    line: 0
    column: 4
  end:
    index: 9
    line: 0
    column: 9
- token: Break
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: Indent
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 13
    line: 1
    column: 2
- token: SequenceEntry
  start:
    index: 13
    line: 1
    column: 2
  end:
    index: 14
    line: 1
    column: 3
- token: Separator
  start:
    index: 14
    line: 1
    column: 3
  end:
    index: 15
    line: 1
    column: 4
- token: Scalar
  start:
    index: 15
    line: 1
    column: 4
  end:
    index: 20
    line: 1
    column: 9
- token: Break
  start:
    index: 20
    line: 1
    column: 9
  end:
    index: 22
    line: 2
    column: 0
- token: Indent
  start:
    index: 22
    line: 2
    column: 0
  end:
    index: 22
    line: 2
    column: 0
- token: SequenceEntry
  start:
    index: 22
    line: 2
    column: 0
  end:
    index: 23
    line: 2
    column: 1
- token: Separator
  start:
    index: 23
    line: 2
    column: 1
  end:
    index: 24
    line: 2
    column: 2
- token: Scalar
  start:
    index: 24
    line: 2
    column: 2
  end:
    index: 26
    line: 2
    column: 4
- token: Break
  start:
    index: 26
    line: 2
    column: 4
  end:
    index: 28
    line: 3
    column: 0

