tests/suite/snapshots/suite__case_3hfz.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: ... invalid\r\n"
  start:
    index: 17
    line: 2
    column: 0
  end:
    index: 17
    line: 2
    column: 0

