tests/suite/snapshots/suite__case_3myt.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: Scalar
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 11
    line: 1
    column: 6
- token: ScalarSpace
  start:
    index: 11
    line: 1
    column: 6
  end:
    index: 13
    line: 2
    column: 0
- token: Indent
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 0
- token: Separator
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 14
    line: 2
    column: 1
- token: Scalar
  start:
    index: 14
    line: 2
    column: 1
  end:
    index: 21
    line: 2
    column: 8
- token: Break
  start:
    index: 21
    line: 2
    column: 8
  end:
    index: 23
    line: 3
    column: 0

